<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_bg"
        android:layout_width="612dp"
        android:layout_height="1024dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/pic0"
        android:layout_width="439dp"
        android:layout_height="362dp"
        android:contentDescription="@string/image0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/marvel" />

    <ImageView
        android:id="@+id/pic1"
        android:layout_width="439dp"
        android:layout_height="362dp"
        android:alpha="0"
        android:contentDescription="@string/image1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/chris_evans" />

    <ImageView
        android:id="@+id/pic2"
        android:layout_width="439dp"
        android:layout_height="362dp"
        android:alpha="0"
        android:contentDescription="@string/image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/robert_downey" />

    <ImageView
        android:id="@+id/pic3"
        android:layout_width="439dp"
        android:layout_height="362dp"
        android:alpha="0"
        android:contentDescription="@string/image3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/ryan" />

    <ImageView
        android:id="@+id/pic4"
        android:layout_width="439dp"
        android:layout_height="362dp"
        android:alpha="0"
        android:contentDescription="@string/image4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/stan_lee" />

    <ImageView
        android:id="@+id/pic5"
        android:layout_width="439dp"
        android:layout_height="362dp"
        android:alpha="0"
        android:contentDescription="@string/image5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/the_rock" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#636971"
        android:textColorHighlight="#99B5B0"
        android:textColorHint="#220808"
        android:textColorLink="#4E3939"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pic0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_chris"
        tools:ignore="UnknownId">

        <ImageButton
            android:id="@+id/prev"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#FF302D2D"
            android:contentDescription="@string/prev"
            android:onClick="prev"
            app:srcCompat="@drawable/icon_prev" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#302D2D"
            android:contentDescription="@string/next"
            android:onClick="next"
            app:srcCompat="@drawable/icon_next" />
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/status"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        android:textColorHighlight="#FFFFFFFF"
        android:textColorHint="#FFFFFFFF"
        android:textColorLink="#FFFFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>